# x64dbgMCP

./: .gitignore  CMakeLists.txt  MCPx64dbg.cpp  MCPx64dbg.dp32  MCPx64dbg.dp64  README.md  build.cmd  cmake.toml  fackJson.go  go.mod  go.sum  mcp.go  mcp_test.go  pkg.go  register.go  复制插件到调试器.cmd
.github/workflows/: go.yml
old/: mcp.go  mcp.go.bak
pkg/: pkg.go  register.go
pluginsdk/: x32bridge.lib  x32dbg.lib  x64bridge.lib  x64dbg.lib
src/: MCPx64dbg.cpp  x64dbg.py
